overlays/sandpit1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluewhale-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "*.bluewhale.sandpit1.learncmd.com.au"
    http:
      paths:
        - backend:
            service:
              name: hello-blue-whale-svc
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: bluewhale.sandpit1.learncmd.com.au
    http:
      paths:
        - backend:
            service:
              name: hello-blue-whale-svc
              port:
                number: 80
          path: /
          pathType: Prefix
